Fixed an issue where the page was not centered correctly.

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 a {
@@ -36,6 +37,7 @@ body {
   min-height: 100vh;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
